--- a/style/style.css
+++ b/style/style.css
@@ -45,6 +45,8 @@ p {
 	width: 100%;
 	background: url('../justbkg.png');
 	background-size: cover;
+	padding: 0;
+	margin: 0;
 }
 
 #hero_logo {
@@ -176,4 +178,19 @@ input {
 	color: #f2f2f2;
 	font-family: 'FlexoMedium';
 	margin: 6% 0 6% 0;
+}
+
+#login {
+	text-align: right;
+	color: white;
+	padding-top: 2%;
+	padding-right: 4%;
+}
+
+#copyright {
+	position: relative;
+	margin-left: 4.5%;
+	color: #4d4d4d;
+	bottom: -2%;
+	clear: both;
 }
